// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bokmål render 1`] = `
<div>
  <header
    class="headerContainer"
  >
    <div
      class="headerLogo"
    >
      <a
        href="http://localhost/helseatlas"
        rel="home"
      >
        <img
          alt="Hjem"
          data-nimg="1"
          decoding="async"
          height="47"
          loading="lazy"
          src="/helseatlas/img/logos/helseatlas.svg?w=384&q=75"
          srcset="/helseatlas/img/logos/helseatlas.svg?w=256&q=75 1x, /helseatlas/img/logos/helseatlas.svg?w=384&q=75 2x"
          style="color: transparent;"
          width="186"
        />
      </a>
    </div>
    <nav
      class="headerNavContainer"
    >
      <div
        class="navButtons"
      >
        <div
          class="lang"
        >
          <div
            class="no active"
            data-testid="buttonNo"
          >
            <a
              href="http://localhost/helseatlas"
            >
              NO
            </a>
          </div>
          <div
            class="eng undefined"
            data-testid="buttonEng"
          >
            <a
              href="http://localhost/helseatlas/en"
            >
              ENG
            </a>
          </div>
        </div>
        <div
          class="menuButton"
        >
          <div>
            <div
              class="popUpBtn"
            >
              <button
                class="button"
                data-testid="menuButton"
              >
                <span
                  class="buttonBurgerIcon"
                >
                  <span
                    class="top"
                  />
                  <span
                    class="middle"
                  />
                  <span
                    class="bottom"
                  />
                </span>
                <span
                  class="buttonText"
                >
                  MENY
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </header>
  <div
    class="container"
  >
    <div
      class="article__title"
    >
      <h1>
        Dette er en tittel
      </h1>
    </div>
    <div
      class="article"
    >
      <div
        class="article__content"
      >
        <div
          class="ingress"
        >
          <p>
            Dette er et sammendrag
          </p>
        </div>
        <p>
          Dette er en kort tekst
        </p>
      </div>
    </div>
  </div>
  <footer
    class="footerContainer"
  >
    <div
      class="footerContent"
    >
      <div
        class="footerTop"
      >
        <strong>
          Senter for klinisk dokumentasjon og evaluering (SKDE)
        </strong>
        <br />
        Postboks 6
        <br />
        9038 Tromsø
        <br />
        <br />
        <strong>
          Helse Førde
        </strong>
        <br />
        Postboks 1000
        <br />
        6807 Førde
      </div>
      <div
        class="footerBottom"
      >
        <div
          class="logo"
        >
          <a
            href="https://helse-nord.no/"
            title="Link til Helse Nord"
          >
            <img
              alt="Helse Nord logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/helse-nord-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/helse-nord-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-nord-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
        <div
          class="logo"
        >
          <a
            href="https://www.skde.no/"
            title="Link til SKDE"
          >
            <img
              alt="SKDE logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/skde-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/skde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/skde-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
        <div
          class="logo"
        >
          <a
            href="https://helse-forde.no/"
            title="Link til Helse Førde"
          >
            <img
              alt="Helse Førde logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/helse-forde-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/helse-forde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-forde-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
        <div
          class="logo"
        >
          <a
            href="https://helse-vest.no/"
            title="Link til Helse Vest"
          >
            <img
              alt="Helse Vest logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/helse-vest-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/helse-vest-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-vest-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`English render 1`] = `
<div>
  <header
    class="headerContainer"
  >
    <div
      class="headerLogo"
    >
      <a
        href="http://localhost/helseatlas/en"
        rel="home"
      >
        <img
          alt="Hjem"
          data-nimg="1"
          decoding="async"
          height="47"
          loading="lazy"
          src="/helseatlas/img/logos/helseatlas.svg?w=384&q=75"
          srcset="/helseatlas/img/logos/helseatlas.svg?w=256&q=75 1x, /helseatlas/img/logos/helseatlas.svg?w=384&q=75 2x"
          style="color: transparent;"
          width="186"
        />
      </a>
    </div>
    <nav
      class="headerNavContainer"
    >
      <div
        class="navButtons"
      >
        <div
          class="lang"
        >
          <div
            class="no undefined"
            data-testid="buttonNo"
          >
            <a
              href="http://localhost/helseatlas"
            >
              NO
            </a>
          </div>
          <div
            class="eng active"
            data-testid="buttonEng"
          >
            <a
              href="http://localhost/helseatlas/en"
            >
              ENG
            </a>
          </div>
        </div>
        <div
          class="menuButton"
        >
          <div>
            <div
              class="popUpBtn"
            >
              <button
                class="button"
                data-testid="menuButton"
              >
                <span
                  class="buttonBurgerIcon"
                >
                  <span
                    class="top"
                  />
                  <span
                    class="middle"
                  />
                  <span
                    class="bottom"
                  />
                </span>
                <span
                  class="buttonText"
                >
                  MENU
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </header>
  <div
    class="container"
  >
    <div
      class="article__title"
    >
      <h1>
        This is the title
      </h1>
    </div>
    <div
      class="article"
    >
      <div
        class="article__content"
      >
        <div
          class="ingress"
        >
          <p>
            This is a summary
          </p>
        </div>
        <p>
          Dette er en test
        </p>
        

        <h1
          id="hovedoverskrift"
        >
          Hovedoverskrift
        </h1>
        

        <p>
          Litt mer tekst
        </p>
        

        <h2
          id="underoverskrift"
        >
          Underoverskrift
        </h2>
        

        <h3
          id="dette-er-en-overskrift"
        >
          Dette er en overskrift!
        </h3>
        

        <pre>
          <code
            class="language-sas"
          >
            data test;
set test2;
var = 0;
run;

          </code>
        </pre>
        

        <p>
          Og litt tekst her
        </p>
      </div>
    </div>
  </div>
  <footer
    class="footerContainer"
  >
    <div
      class="footerContent"
    >
      <div
        class="footerTop"
      >
        <strong>
          Senter for klinisk dokumentasjon og evaluering (SKDE)
        </strong>
        <br />
        Postboks 6
        <br />
        9038 Tromsø
        <br />
        <br />
        <strong>
          Helse Førde
        </strong>
        <br />
        Postboks 1000
        <br />
        6807 Førde
      </div>
      <div
        class="footerBottom"
      >
        <div
          class="logo"
        >
          <a
            href="https://helse-nord.no/"
            title="Link til Helse Nord"
          >
            <img
              alt="Helse Nord logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/helse-nord-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/helse-nord-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-nord-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
        <div
          class="logo"
        >
          <a
            href="https://www.skde.no/"
            title="Link til SKDE"
          >
            <img
              alt="SKDE logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/skde-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/skde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/skde-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
        <div
          class="logo"
        >
          <a
            href="https://helse-forde.no/"
            title="Link til Helse Førde"
          >
            <img
              alt="Helse Førde logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/helse-forde-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/helse-forde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-forde-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
        <div
          class="logo"
        >
          <a
            href="https://helse-vest.no/"
            title="Link til Helse Vest"
          >
            <img
              alt="Helse Vest logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/helse-vest-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/helse-vest-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-vest-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Nynorsk render 1`] = `
<div>
  <header
    class="headerContainer"
  >
    <div
      class="headerLogo"
    >
      <a
        href="http://localhost/helseatlas"
        rel="home"
      >
        <img
          alt="Hjem"
          data-nimg="1"
          decoding="async"
          height="47"
          loading="lazy"
          src="/helseatlas/img/logos/helseatlas.svg?w=384&q=75"
          srcset="/helseatlas/img/logos/helseatlas.svg?w=256&q=75 1x, /helseatlas/img/logos/helseatlas.svg?w=384&q=75 2x"
          style="color: transparent;"
          width="186"
        />
      </a>
    </div>
    <nav
      class="headerNavContainer"
    >
      <div
        class="navButtons"
      >
        <div
          class="lang"
        >
          <div
            class="no active"
            data-testid="buttonNo"
          >
            <a
              href="http://localhost/helseatlas"
            >
              NO
            </a>
          </div>
          <div
            class="eng undefined"
            data-testid="buttonEng"
          >
            <a
              href="http://localhost/helseatlas/en"
            >
              ENG
            </a>
          </div>
        </div>
        <div
          class="menuButton"
        >
          <div>
            <div
              class="popUpBtn"
            >
              <button
                class="button"
                data-testid="menuButton"
              >
                <span
                  class="buttonBurgerIcon"
                >
                  <span
                    class="top"
                  />
                  <span
                    class="middle"
                  />
                  <span
                    class="bottom"
                  />
                </span>
                <span
                  class="buttonText"
                >
                  MENY
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </header>
  <div
    class="container"
  >
    <div
      class="article__title"
    >
      <h1>
        Dette er ein tittel
      </h1>
    </div>
    <div
      class="article"
    >
      <div
        class="article__content"
      >
        <div
          class="ingress"
        >
          <p>
            Dette er eit samandrag
          </p>
        </div>
        <p>
          Dette er ein kort tekst
        </p>
      </div>
    </div>
  </div>
  <footer
    class="footerContainer"
  >
    <div
      class="footerContent"
    >
      <div
        class="footerTop"
      >
        <strong>
          Senter for klinisk dokumentasjon og evaluering (SKDE)
        </strong>
        <br />
        Postboks 6
        <br />
        9038 Tromsø
        <br />
        <br />
        <strong>
          Helse Førde
        </strong>
        <br />
        Postboks 1000
        <br />
        6807 Førde
      </div>
      <div
        class="footerBottom"
      >
        <div
          class="logo"
        >
          <a
            href="https://helse-nord.no/"
            title="Link til Helse Nord"
          >
            <img
              alt="Helse Nord logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/helse-nord-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/helse-nord-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-nord-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
        <div
          class="logo"
        >
          <a
            href="https://www.skde.no/"
            title="Link til SKDE"
          >
            <img
              alt="SKDE logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/skde-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/skde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/skde-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
        <div
          class="logo"
        >
          <a
            href="https://helse-forde.no/"
            title="Link til Helse Førde"
          >
            <img
              alt="Helse Førde logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/helse-forde-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/helse-forde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-forde-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
        <div
          class="logo"
        >
          <a
            href="https://helse-vest.no/"
            title="Link til Helse Vest"
          >
            <img
              alt="Helse Vest logo"
              data-nimg="1"
              decoding="async"
              height="40"
              loading="lazy"
              src="/helseatlas/img/logos/helse-vest-hvit.svg?w=384&q=75"
              srcset="/helseatlas/img/logos/helse-vest-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-vest-hvit.svg?w=384&q=75 2x"
              style="color: transparent;"
              width="180"
            />
          </a>
        </div>
      </div>
    </div>
  </footer>
</div>
`;
